--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,17 +19,25 @@ $font--primary: "Open Sans";
 $transition--length: 0.8;
 
 
+//media query variables
+$media-query-max-width-mobile: 425px;
+$media-query-max-width-tablet: 768px;
+$media-query-max-width-laptop: 1024px;
+
+
+//project gradient colors
 $pika_games-color: linear-gradient(to right,#FFB22A, #FF685E);
 $eklavya_study-color: linear-gradient(to right,#4BBFAA, #BBCD61);
 $pika_browser-color: linear-gradient(to right,#5EAC24,#91DC5A);
 
 
-$navbar_height: 8vmin;
-
+//widgets responsive sizes
 $button_margin_h: 2.4vmax;
 $button_margin_v: 1.8vmin;
 $border_radius: 0.8vmin;
 
+
+//font resonsive sizes
 $font_size_small_x: calc(0.6vw + 0.6vh);
 $font_size_small_xx: calc(0.4vw + 0.4vh);
 $font_size_small_xxx: calc(0.2vw + 0.2vh);
@@ -55,7 +63,18 @@ $font_size_header_xx: calc(12vw + 12vh);
 $font_size_header_xxx: calc(8vw + 8vh);
 
 
-//++++++++++++++++++++++ DEFAULT COMPONENTS +++++++++++++++++++++++++++
+
+
+//=====================================================================================//
+// 
+// ██████╗ ███████╗███████╗ █████╗ ██╗   ██╗██╗  ████████╗
+// ██╔══██╗██╔════╝██╔════╝██╔══██╗██║   ██║██║  ╚══██╔══╝
+// ██║  ██║█████╗  █████╗  ███████║██║   ██║██║     ██║   
+// ██║  ██║██╔══╝  ██╔══╝  ██╔══██║██║   ██║██║     ██║   
+// ██████╔╝███████╗██║     ██║  ██║╚██████╔╝███████╗██║   
+// ╚═════╝ ╚══════╝╚═╝     ╚═╝  ╚═╝ ╚═════╝ ╚══════╝╚═╝                                            
+// 
+//=====================================================================================//
 
 html {
   scroll-behavior: smooth;
@@ -83,13 +102,26 @@ body::-webkit-scrollbar-thumb {
   background: $font--color-light;
 }
 
-//+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+//----------------------------------------------------------------------------------// 
 
 
 
 
-
-//++++++++++++++++++++++++++++ UNIVERSAL COMPONENTS +++++++++++++++++++++++++++++++++++++
+//=====================================================================================//
+// 
+// ██████╗ ██╗      ██████╗ ██████╗  █████╗ ██╗     
+// ██╔════╝ ██║     ██╔═══██╗██╔══██╗██╔══██╗██║     
+// ██║  ███╗██║     ██║   ██║██████╔╝███████║██║     
+// ██║   ██║██║     ██║   ██║██╔══██╗██╔══██║██║     
+// ╚██████╔╝███████╗╚██████╔╝██████╔╝██║  ██║███████╗
+//  ╚═════╝ ╚══════╝ ╚═════╝ ╚═════╝ ╚═╝  ╚═╝╚══════╝
+//  
+//=====================================================================================//                                    
 
 .content-seperator {
   background-color: rgba(255, 255, 255, 0.199);
@@ -97,10 +129,21 @@ body::-webkit-scrollbar-thumb {
 
 .content__page {
   width: 100%;
-  height: 100vmin;
-  padding-left: 12vw;
-  padding-right: 12vw;
-  //padding-bottom: 4vw;
+  height: 100vh;
+}
+
+@media (min-width: 992px) {
+  .content__page {
+    padding-left: 12vw;
+    padding-right: 12vw;
+  }
+}
+
+@media (max-width: 992px) {
+  .content__page {
+    padding-left: 8vw;
+    padding-right: 8vw;
+  }
 }
 
 .content-header {
@@ -159,16 +202,23 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-//++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+//----------------------------------------------------------------------------------// 
 
 
 
 
-
-//++++++++++++++++++++++++++++++++++++++++++++HOME PAGE +++++++++++++++++++++++++++++++++++++
+//===================================================================================//
+// 
+// ██╗  ██╗ ██████╗ ███╗   ███╗███████╗
+// ██║  ██║██╔═══██╗████╗ ████║██╔════╝
+// ███████║██║   ██║██╔████╔██║█████╗  
+// ██╔══██║██║   ██║██║╚██╔╝██║██╔══╝  
+// ██║  ██║╚██████╔╝██║ ╚═╝ ██║███████╗
+// ╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚══════╝                             
+// 
+//=====================================================================================//
 
 #container_home {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -188,16 +238,21 @@ body::-webkit-scrollbar-thumb {
   height: $font_size_header_xxx;
 }
 
-
-//==================================================================================
-
+//----------------------------------------------------------------------------------// 
 
 
 
 
-
-
-//++++++++++++++++++++++++++++++++++++ SKILLS +++++++++++++++++++++++++++++++++++++++
+//===================================================================================//
+// 
+// ███████╗██╗  ██╗██╗██╗     ██╗     ███████╗
+// ██╔════╝██║ ██╔╝██║██║     ██║     ██╔════╝
+// ███████╗█████╔╝ ██║██║     ██║     ███████╗
+// ╚════██║██╔═██╗ ██║██║     ██║     ╚════██║
+// ███████║██║  ██╗██║███████╗███████╗███████║
+// ╚══════╝╚═╝  ╚═╝╚═╝╚══════╝╚══════╝╚══════╝
+// 
+//===================================================================================//
 
 #skills {
   height: fit-content;
@@ -325,9 +380,21 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-//===================================================================================
+//----------------------------------------------------------------------------------// 
 
-//+++++++++++++++++++++++++++++++++++++EXPERIENCE ++++++++++++++++++++++++++++++++++++
+
+
+
+//===================================================================================//
+// 
+// ███████╗██╗  ██╗██████╗ ███████╗██████╗ ██╗███████╗███╗   ██╗ ██████╗███████╗
+// ██╔════╝╚██╗██╔╝██╔══██╗██╔════╝██╔══██╗██║██╔════╝████╗  ██║██╔════╝██╔════╝
+// █████╗   ╚███╔╝ ██████╔╝█████╗  ██████╔╝██║█████╗  ██╔██╗ ██║██║     █████╗  
+// ██╔══╝   ██╔██╗ ██╔═══╝ ██╔══╝  ██╔══██╗██║██╔══╝  ██║╚██╗██║██║     ██╔══╝  
+// ███████╗██╔╝ ██╗██║     ███████╗██║  ██║██║███████╗██║ ╚████║╚██████╗███████╗
+// ╚══════╝╚═╝  ╚═╝╚═╝     ╚══════╝╚═╝  ╚═╝╚═╝╚══════╝╚═╝  ╚═══╝ ╚═════╝╚══════╝                                                                            
+// 
+//===================================================================================//
 
 #experience {
   height: fit-content;
@@ -433,12 +500,21 @@ body::-webkit-scrollbar-thumb {
   color: rgba(255, 255, 255, 0.5);
 }
 
+//----------------------------------------------------------------------------------// 
 
 
-//===================================================================================
 
 
-//++++++++++++++++++++++++++++++++++++++ PROJECTS +++++++++++++++++++++++++++++++++++
+//===================================================================================//
+// 
+// ██████╗ ██████╗  ██████╗      ██╗███████╗ ██████╗████████╗███████╗
+// ██╔══██╗██╔══██╗██╔═══██╗     ██║██╔════╝██╔════╝╚══██╔══╝██╔════╝
+// ██████╔╝██████╔╝██║   ██║     ██║█████╗  ██║        ██║   ███████╗
+// ██╔═══╝ ██╔══██╗██║   ██║██   ██║██╔══╝  ██║        ██║   ╚════██║
+// ██║     ██║  ██║╚██████╔╝╚█████╔╝███████╗╚██████╗   ██║   ███████║
+// ╚═╝     ╚═╝  ╚═╝ ╚═════╝  ╚════╝ ╚══════╝ ╚═════╝   ╚═╝   ╚══════╝                                                                 
+// 
+//===================================================================================//
 
 #projects {
   height: fit-content;
@@ -615,17 +691,36 @@ body::-webkit-scrollbar-thumb {
   background-color: #192B33;
 }
 
-
-//===================================================================================
-
+//----------------------------------------------------------------------------------// 
 
 
 
-//++++++++++++++++++++++++++++++++++++++ FOOTER +++++++++++++++++++++++++++++++++++++
+
+//===================================================================================//
+// 
+// ███████╗ ██████╗  ██████╗ ████████╗███████╗██████╗ 
+// ██╔════╝██╔═══██╗██╔═══██╗╚══██╔══╝██╔════╝██╔══██╗
+// █████╗  ██║   ██║██║   ██║   ██║   █████╗  ██████╔╝
+// ██╔══╝  ██║   ██║██║   ██║   ██║   ██╔══╝  ██╔══██╗
+// ██║     ╚██████╔╝╚██████╔╝   ██║   ███████╗██║  ██║
+// ╚═╝      ╚═════╝  ╚═════╝    ╚═╝   ╚══════╝╚═╝  ╚═╝                                                           
+// 
+//===================================================================================//
 
 footer {
-  padding: 4vh 12vw;
   background-color: black;
+}
+
+@media (min-width: $media-query-max-width-tablet) {
+  footer {
+    padding: 4vh 12vw 8vh 12vw;
+  }
+}
+
+@media (max-width: $media-query-max-width-tablet) {
+  footer {
+    padding: 4vh 8vw 8vh 8vw;
+  }
 }
 
 .block__links {
@@ -634,11 +729,6 @@ footer {
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 8vmin;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
 }
 
 .block__copyright {
@@ -651,7 +741,7 @@ ul {
   border-radius: 1vmin;
   padding-top: 4vmin;
   padding-bottom: 4vmin;
-  margin-bottom: $navbar_height;
+  margin-bottom: 10vh;
   background-color: $background--color;
   transition: 250ms ease-in-out;
 }
@@ -672,18 +762,23 @@ ul {
   flex-direction: column;
 }
 
-//===================================================================================
+//----------------------------------------------------------------------------------// 
 
 
 
 
+//===================================================================================//
+// 
+// ███╗   ██╗ █████╗ ██╗   ██╗    ██████╗ ███████╗███████╗██╗  ██╗████████╗ ██████╗ ██████╗ 
+// ████╗  ██║██╔══██╗██║   ██║    ██╔══██╗██╔════╝██╔════╝██║ ██╔╝╚══██╔══╝██╔═══██╗██╔══██╗
+// ██╔██╗ ██║███████║██║   ██║    ██║  ██║█████╗  ███████╗█████╔╝    ██║   ██║   ██║██████╔╝
+// ██║╚██╗██║██╔══██║╚██╗ ██╔╝    ██║  ██║██╔══╝  ╚════██║██╔═██╗    ██║   ██║   ██║██╔═══╝ 
+// ██║ ╚████║██║  ██║ ╚████╔╝     ██████╔╝███████╗███████║██║  ██╗   ██║   ╚██████╔╝██║     
+// ╚═╝  ╚═══╝╚═╝  ╚═╝  ╚═══╝      ╚═════╝ ╚══════╝╚══════╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝  
+//                                                                                                                                                              
+//===================================================================================//
 
-
-
-
-//++++++++++++++++++++++++++++++++++++++ NAVBAR - DESKTOP +++++++++++++++++++++++++++
-
-@media (min-width: 992px) {
+@media (min-width: $media-query-max-width-tablet) {
   .nav__desktop {
     list-style: none;
     padding: 0;
@@ -734,21 +829,29 @@ ul {
 
 }
 
-@media (max-width: 992px) {
+@media (max-width: $media-query-max-width-tablet) {
   .nav__desktop {
     display: none;
   }
 }
 
-//++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+//----------------------------------------------------------------------------------// 
 
 
 
 
+//===================================================================================//
+// 
+// ███╗   ██╗ █████╗ ██╗   ██╗    ███╗   ███╗ ██████╗ ██████╗ ██╗██╗     ███████╗
+// ████╗  ██║██╔══██╗██║   ██║    ████╗ ████║██╔═══██╗██╔══██╗██║██║     ██╔════╝
+// ██╔██╗ ██║███████║██║   ██║    ██╔████╔██║██║   ██║██████╔╝██║██║     █████╗  
+// ██║╚██╗██║██╔══██║╚██╗ ██╔╝    ██║╚██╔╝██║██║   ██║██╔══██╗██║██║     ██╔══╝  
+// ██║ ╚████║██║  ██║ ╚████╔╝     ██║ ╚═╝ ██║╚██████╔╝██████╔╝██║███████╗███████╗
+// ╚═╝  ╚═══╝╚═╝  ╚═╝  ╚═══╝      ╚═╝     ╚═╝ ╚═════╝ ╚═════╝ ╚═╝╚══════╝╚══════╝                                                                          
+//                                                            
+//===================================================================================//
 
-//++++++++++++++++++++++++++++++++++ NAVBAR MOBILE +++++++++++++++++++++++++++++++++++
-
-@media (max-width: 992px) {
+@media (max-width: $media-query-max-width-tablet) {
   .nav__mobile {
     position: fixed;
     bottom: 0;
@@ -796,7 +899,7 @@ ul {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $media-query-max-width-tablet) {
   .nav__mobile {
     display: none;
   }
@@ -809,27 +912,26 @@ ul {
 
 
 
-//+++++++++++++++++++++++++++++++ ABOUT PAGE ++++++++++++++++++++++++++++++++++++
+//===================================================================================//
+// 
+// █████╗ ██████╗  ██████╗ ██╗   ██╗████████╗
+// ██╔══██╗██╔══██╗██╔═══██╗██║   ██║╚══██╔══╝
+// ███████║██████╔╝██║   ██║██║   ██║   ██║   
+// ██╔══██║██╔══██╗██║   ██║██║   ██║   ██║   
+// ██║  ██║██████╔╝╚██████╔╝╚██████╔╝   ██║   
+// ╚═╝  ╚═╝╚═════╝  ╚═════╝  ╚═════╝    ╚═╝                                                            
+// 
+//===================================================================================//
 
 #about {
   height: fit-content;
   margin-bottom: 14vmin;
 }
 
-@media (max-width: 1024px) {
-  .container__about {
-    display: grid;
-    gap: 4vmax;
-    grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-@media (min-width: 1024px) {
-  .container__about {
-    display: grid;
-    gap: 4vmax;
-    grid-template-columns: repeat(2, 1fr);
-  }
+.container__about {
+  display: grid;
+  gap: 4vmax;
+  grid-template-columns: repeat(auto-fill, 2fr);
 }
 
 .block__info {
@@ -915,69 +1017,36 @@ ul {
 	margin-top: 4vmin;
 }
 
-//===============================================================================
+//------------------------------------------------------------------------------//
 
 
 
 
+//===================================================================================//
+// 
+// ███████╗ ██████╗ ███╗   ██╗████████╗    ███████╗██╗███████╗███████╗
+// ██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝    ██╔════╝██║╚══███╔╝██╔════╝
+// █████╗  ██║   ██║██╔██╗ ██║   ██║       ███████╗██║  ███╔╝ █████╗  
+// ██╔══╝  ██║   ██║██║╚██╗██║   ██║       ╚════██║██║ ███╔╝  ██╔══╝  
+// ██║     ╚██████╔╝██║ ╚████║   ██║       ███████║██║███████╗███████╗
+// ╚═╝      ╚═════╝ ╚═╝  ╚═══╝   ╚═╝       ╚══════╝╚═╝╚══════╝╚══════╝                                        
+// 
+//===================================================================================//
 
-
-//+++++++++++++++++++++++++++++++ FONT WEIGHTS ++++++++++++++++++++++++++++++++++
-
-.italic {
-  font-style: italic;
+p {
+  color: rgba(255, 255, 255, 0.5);
+  padding: 0;
+  margin: 0;
 }
 
-.heavy-bold {
-  font-weight: 900;
-}
-
-.extra-bold {
-  font-weight: 800;
-}
-
-.semi-bold {
-  font-weight: 600;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-.regular {
-  font-weight: normal;
-}
-
-.medium {
-  font-weight: 500;
-}
-
-.light {
-  font-weight: 300;
-}
-
-.thin {
-  font-weight: 100;
-}
-
-//================================================================================
-
-//++++++++++++++++++++++++++++++++++ FONT SIZE CHANGES +++++++++++++++++++++++++++
-
-@media (max-width: 480px) {
+@media (max-width: media-query-max-width-mobile) {
   p {
-    color: rgba(255, 255, 255, 0.5);
-    padding: 0;
-    margin: 0;
     font-size: $font_size_normal_xx;
   }
 }
 
-@media (min-width: 480px) {
+@media (min-width: media-query-max-width-mobile) {
   p {
-    color: rgba(255, 255, 255, 0.5);
-    padding: 0;
-    margin: 0;
     font-size: $font_size_small_x;
   }
 }
@@ -1024,9 +1093,74 @@ h6 {
   font-size: $font_size_normal_xxx;
 }
 
-//==================================================================================
+//-----------------------------------------------------------------------------------//
 
-//+++++++++++++++++++++++++++++++++ COLOR PROPERTIES +++++++++++++++++++++++++++++++
+
+
+
+
+//===================================================================================//
+// 
+// ███████╗ ██████╗ ███╗   ██╗████████╗    ██╗    ██╗███████╗██╗ ██████╗ ██╗  ██╗████████╗
+// ██╔════╝██╔═══██╗████╗  ██║╚══██╔══╝    ██║    ██║██╔════╝██║██╔════╝ ██║  ██║╚══██╔══╝
+// █████╗  ██║   ██║██╔██╗ ██║   ██║       ██║ █╗ ██║█████╗  ██║██║  ███╗███████║   ██║   
+// ██╔══╝  ██║   ██║██║╚██╗██║   ██║       ██║███╗██║██╔══╝  ██║██║   ██║██╔══██║   ██║   
+// ██║     ╚██████╔╝██║ ╚████║   ██║       ╚███╔███╔╝███████╗██║╚██████╔╝██║  ██║   ██║   
+// ╚═╝      ╚═════╝ ╚═╝  ╚═══╝   ╚═╝        ╚══╝╚══╝ ╚══════╝╚═╝ ╚═════╝ ╚═╝  ╚═╝   ╚═╝                                                    
+// 
+//===================================================================================//
+
+.italic {
+  font-style: italic;
+}
+
+.heavy-bold {
+  font-weight: 900;
+}
+
+.extra-bold {
+  font-weight: 800;
+}
+
+.semi-bold {
+  font-weight: 600;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.regular {
+  font-weight: normal;
+}
+
+.medium {
+  font-weight: 500;
+}
+
+.light {
+  font-weight: 300;
+}
+
+.thin {
+  font-weight: 100;
+}
+
+//--------------------------------------------------------------------------------//
+
+
+
+
+//===================================================================================//
+// 
+// ██████╗ ██████╗ ██╗      ██████╗ ██████╗ ███████╗
+// ██╔════╝██╔═══██╗██║     ██╔═══██╗██╔══██╗██╔════╝
+// ██║     ██║   ██║██║     ██║   ██║██████╔╝███████╗
+// ██║     ██║   ██║██║     ██║   ██║██╔══██╗╚════██║
+// ╚██████╗╚██████╔╝███████╗╚██████╔╝██║  ██║███████║
+//  ╚═════╝ ╚═════╝ ╚══════╝ ╚═════╝ ╚═╝  ╚═╝╚══════╝
+// 
+//===================================================================================//
 
 .color-primary {
   color: $primary-color;
@@ -1068,4 +1202,4 @@ h6 {
   background-color: $background--color-light;
 }
 
-//==================================================================================
+//-----------------------------------------------------------------------------------//
