--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -39,11 +39,11 @@ $border_radius: 0.8vmin;
 
 //font resonsive sizes
 $font_size_small_x: calc(0.6vw + 0.6vh);
-$font_size_small_xx: calc(0.4vw + 0.4vh);
-$font_size_small_xxx: calc(0.2vw + 0.2vh);
+$font_size_small_xx: calc(0.5vw + 0.5vh);
+$font_size_small_xxx: calc(0.3vw + 0.3vh);
 
-$font_size_normal_x: calc(1.2vw + 1.2vh);
-$font_size_normal_xx: calc(1vw + 1vh);
+$font_size_normal_x: calc(1.3vw + 1.3vh);
+$font_size_normal_xx: calc(1.15vw + 1.15vh);
 $font_size_normal_xxx: calc(0.8vw + 0.8vh);
 
 $font_size_medium_x: calc(1.8vw + 1.8vh);
@@ -111,6 +111,16 @@ p {
   color: rgba(255, 255, 255, 0.5);
   padding: 0;
   margin: 0;
+}
+
+input[type="text"],input[type="email"] {
+  border-radius: 0.5vmin;
+  padding: 2.5vmin 2vmin;
+}
+
+textarea[name="message"] {
+  border-radius: 0.5vmin;
+  padding: 2.5vmin 2vmin;
 }
 
 //----------------------------------------------------------------------------------// 
@@ -242,6 +252,31 @@ p {
 
 .block__header img {
   height: $font_size_header_xxx;
+}
+
+.normal-button {
+  margin-top: 1rem;
+  padding-left: $button_margin_h;
+  padding-right: $button_margin_h;
+  padding-top: $button_margin_v;
+  padding-bottom: $button_margin_v;
+  //font-size: $font_size_normal_xxx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: white;
+  background: $primary-color;
+  border-radius: $border_radius;
+  border: none;
+  width: auto;
+  height: auto;
+  pointer-events: auto;
+  transition: 200ms ease-in-out;
+}
+
+.normal-button:hover,
+.normal-button:focus {
+  background: $primary-color-dark;
 }
 
 //----------------------------------------------------------------------------------// 
@@ -409,7 +444,7 @@ p {
 
 .accordion {
   width: 100%;
-  max-width: $media-query-max-width-tablet;
+  max-width: 100vmin;
   border-left: 0.5vmin solid white;
   padding-left: calc(3vw + 3vh);
 }
@@ -1029,16 +1064,34 @@ footer {
 //===================================================================================//
 
 @media (max-width: $media-query-max-width-mobile) {
-  p {
+  p,label {
+    font-size: $font_size_normal_xx;
+  }
+
+  input[type="text"],input[type="email"] {
+    font-size: $font_size_normal_xx;
+  }
+  
+  textarea[name="message"] {
     font-size: $font_size_normal_xx;
   }
 }
 
 @media (min-width: $media-query-max-width-mobile) {
-  p {
+  p,label {
+    font-size: $font_size_small_x;
+  }
+
+  input[type="text"],input[type="email"] {
+    font-size: $font_size_small_x;
+  }
+  
+  textarea[name="message"] {
     font-size: $font_size_small_x;
   }
 }
+
+
 
 h1 {
   padding: 0;
